24/12/2025
jxtdAuto 0.1.6++:
+ Sửa lỗi chia sẻ vật phẩm
+ Thêm tùy chọn "Chỉ làm nhiệm vụ khi đủ vật phẩm"

24/12/2025
jxtdAuto 0.1.6+:
+ Fix lỗi báo danh TK
+ Fix lỗi lưu rương sau khi đi TK & Phong Lăng Độ
+ Năng động có thể chọn riêng từng hoạt động (click phải lên Năng động, tab Cơ bản)
+ Thêm hẹn giờ Đào kho báu
+ Có kèm theo gamecl phù hợp với auto

21/12/2025
jxtdAuto 0.1.5++:
+ Sửa lỗi buff miệt mài
+ Sửa một số lỗi chia sẻ vật phẩm
+ Thêm tùy chọn chia sẽ vật phẩm nhiệm vụ (tab Tiện ích)
+ Thêm Bỏ qua bang hội (tab Đối thủ)

20/12/2025
jxtdAuto 0.1.5+:
+ Sửa lỗi không mua vật phẩm từ NPC
+ Hẹn giờ có thể bật/tắt riêng từng tác vụ
+ Trả lại tính năng 'Bảo vệ cừu sát'
+ Tính năng cho trang bị nhiệm vụ (hiện đang tự động, nếu không ổn sẽ đổi thành tùy chọn)
Có sẵn thì cho ngay, không có nếu đi luyện công nhặt được thì đem về cho
+ Tính năng chia sẻ vật phẩm (tab Tiện ích):
Chỉ chia sẻ khi nhân vật chia sẻ đang hoạt động ở tác vụ Luyện công hoặc không làm gì (không hoạt động ở Auto PK)

17/12/2025
jxtdAuto 0.1.5: (re-up)
+ Sửa lỗi giám định tàng bảo đồ

17/12/2025
jxtdAuto 0.1.5:
+ Thêm tính năng hẹn giờ làm nhiệm vụ (tab Tiện ích)
+ Tự vệ thêm tùy chọn chỉ đổi phe (màu) khi số đối tượng đồ sát >=, cấp >=, tránh trường hợp nhá màu :3
+ Thêm điều kiện sử dụng vật phẩm 'Trị PK10', 'Đánh Boss'
+ Ghép sách rèn (chỉ ghép nếu đủ 2000 mảnh trang bị trong hành trang)
+ Nhiệm vụ Mặc Thạch sẽ làm hết nhiệm vụ nếu là ngày chủ nhật (bỏ qua thiết lập số nhiệm vụ để lại)
+ Nhặt vật phẩm, thêm tùy chọn chi tiết hơn
+ Ưu tiên quái, bỏ qua quái theo ngũ hành (tab Đối thủ)
+ Thêm tùy chọn về thành khi hết Ngọc Lộ Hoàn (tab Luyện công)
+ Thêm mở túi thuốc (tab Tiện ích)
+ Sửa lỗi game đếm sai số client (tab)
+ Sửa một số lỗi khác
+ TẠM KHÓA TÍNH NĂNG "BẢO VỆ CỪU SÁT"

14/12/2025
jxtdAuto 0.1.5: (Cập nhật sau)
+ Thêm tính năng hẹn giờ làm nhiệm vụ (tab Tiện ích)
+ Tự vệ thêm tùy chọn chỉ đổi phe (màu) khi số đối tượng đồ sát >=, cấp >=, tránh trường hợp nhá màu :3